# ios-cmake

./: README.md
tedit/: README.md
test1/: .gitignore  CONFIGURE.md  Makefile  README.md  WORKFLOW.md  configure
test1/src/: CMakeLists.txt  LaunchScreen.storyboard  app.cmake  ios.cmake  plist.in
test1/src/app/: AppDelegate.m  CMakeLists.txt  ViewController.h  ViewController.mm  cns.h  ctest.cc  main.m
test1/src/resources/: test2.txt
test1/src/test1/: AppDelegate.h  AppDelegate.m  CMakeLists.txt  ViewController.mm  cns.mm  ctest.h
